--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Keyboard widget, which triggers on user keyboard events"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Keyboard</title>
@@ -13,11 +12,9 @@
             margin: 0;
         }
     </style>
-    <link rel="stylesheet" href="keyboard.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-<div id="keyboard" style="width:80%; margin: 30px auto;"></div>
-<script async src="keyboard.js"></script>
+<div id="keyboard" style="width:80%; margin: 50px auto;"></div>
+<script async src="./keyboard.js"></script>
 </body>
 </html>
